--- a/src/main/webapp/css/searchPageStyle.css
+++ b/src/main/webapp/css/searchPageStyle.css
@@ -2,3 +2,19 @@ ul {
     width: 10%;
     margin: auto;
 }
+h1{
+
+    padding-top: 100px;
+}
+tbody {
+    padding-top: 200px;
+}
+
+body {
+    background-image: url("http://topcleaning.info/wp-content/uploads/2018/04/book-powerpoint-background-powerpoint-background-book-books-and-apple-powerpoint-templates-download.jpg");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+tr{
+    height: 37px;
+}
