--- a/src/main/webapp/css/registerPageStyle.css
+++ b/src/main/webapp/css/registerPageStyle.css
@@ -4,6 +4,48 @@
 }
 
 body {
-    padding: 10%;
+    padding: 70px;
+}
+
+input[type=text], [type=password], [type=date] {
+    width: 100%;
+    padding: 10px 20px;
+    margin: 3px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #439247;
+}
+
+a:link, a:visited {
+    background-color: #0000ff;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: #0000ba;
 }
 
