--- a/src/main/webapp/css/searchPageStyle.css
+++ b/src/main/webapp/css/searchPageStyle.css
@@ -1,5 +1,9 @@
+body {
+    overflow-x: hidden;
+}
+
 h1 {
-    padding:10px 100px 10px 320px;
+    padding: 10px 100px 10px 320px;
     color: white;
     text-align: left;
     background-color: #169919;
@@ -56,12 +60,11 @@ ul {
 a.page-link {
     color: green;
 }
-.pagination{
-    position: fixed;
-    bottom: 150px;
-    left: 250px;
-    right: 250px;
-    width: 100px;
+
+.pagination {
+
+    position: page;
+    margin-top: 50px;
 }
 
 input[type=text] {
@@ -77,22 +80,45 @@ input[type=text] {
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
+
 input[type=text]:focus {
     width: 600px;
 }
-#left{
+
+#left {
     padding-left: 100px;
 }
 
 select {
-    padding:3px;
+    padding: 3px;
     margin: 2px;
-    border-radius:4px;
+    border-radius: 4px;
     background: #4CAF50;
-    color:white;
-    border:none;
+    color: white;
+    border: none;
 }
 
-#userOptions{
-    text-align: right;
+#userOptions, #logOut, #addNewBook {
+    font-size: 18px;
+    float: right;
+    color: #ffffff;
+    padding: 8px 12px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    text-decoration: none;
+}
+
+#userOptions {
+    margin-top: 40px;
+    margin-right: 50px;
+}
+
+#logOut {
+    margin-top: 40px;
+}
+
+#addNewBook {
+    margin-top: 40px;
+    margin-right: 50px;
 }
